# trader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/gateway/: Dockerfile  entrypoint.sh
apps/monitor/: Dockerfile  monitor.py
apps/strategy/: Dockerfile  main.py
infra/: docker-compose.yml
infra/deploy/: deploy.sh  prometheus.yml
infra/deploy/grafana-provisioning/: dashboards.yml
tests/: conftest.py
tests/sim/: test_sim_strategy.py
tests/unit/: test_ibkr_client.py  test_order_journal.py  test_risk.py
